# debt_wally_bot

./: .env-template  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-python-package.yml
app/: app.py  credentials.py  main.py
app/classes/: command.py  database_conection.py  debug.py
app/classes/tests/: test_command.py  test_debug.py
app/misc/: command_helpers.py  constants.py  exceptions.py  helpers.py
app/misc/tests/: test_helpers.py
telebot/: credentials.py
