[tool.poetry]
name = "debt_bot"
version = "0.1.1"
description = "Debt bot for two people on Telegram"
authors = ["m-sanchez-dev <mikelsmartinez@aol.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
python-telegram-bot = "^21.0.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^24.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
