[tool.poetry]
name = "debt_bot"
version = "0.1.2"
description = "Debt bot for two people on Telegram"
authors = ["m-sanchez-dev <mikelsmartinez@aol.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
python-telegram-bot = "^21.0.1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
